# MultiboxSoftware

./: .gitignore  Cargo.toml  GEMINI.MD  window_config.json
addon/: BalanceDruid.lua  Config.lua  DemonologyWarlock.lua  FeralBearDruid.lua  FeralCatDruid.lua  Follow.lua  GuildBank.lua  HolyPaladin.lua  LFG.lua  Maps.lua  Movement.lua  Multibox.lua  Multibox.toc  Party.lua  Quest.lua  RestoShaman.lua  RetriPaladin.lua  ShadowPriest.lua
addon/specs/: BalanceDruid.lua  DemonologyWarlock.lua  ElementalShaman.lua  FeralBearDruid.lua  FeralCatDruid.lua  FuryWarrior.lua  HolyPaladin.lua  RestoDruid.lua  RestoShaman.lua  RetriPaladin.lua  ShadowPriest.lua
src/: main.rs
