[package]
name = "MultiboxSoftware"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = "0.13.1"
iced_winit = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.windows]
version = "0.61.1"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi"
]